openexr-sys/openexr-c/include/imath_vec.h


enum Imath_3_0__InfException_e {
    Imath_InfException_INF_EXCEPTION = 0,
};
typedef struct Imath_3_0__Vec2_short__t_s {
    short x;
    short y;
} OPENEXR_ALIGN(2) Imath_3_0__Vec2_short__t;
typedef Imath_3_0__Vec2_short__t Imath_V2s_t;
typedef struct Imath_3_0__Vec2_int__t_s {
    int x;
    int y;
} OPENEXR_ALIGN(4) Imath_3_0__Vec2_int__t;
typedef Imath_3_0__Vec2_int__t Imath_V2i_t;
typedef struct Imath_3_0__Vec2_long__t_s {
    long x;
    long y;
} OPENEXR_ALIGN(8) Imath_3_0__Vec2_long__t;
typedef Imath_3_0__Vec2_long__t Imath_V2i64_t;
typedef struct Imath_3_0__Vec2_float__t_s {
    float x;
    float y;
} OPENEXR_ALIGN(4) Imath_3_0__Vec2_float__t;
typedef struct Imath_3_0__Vec2_double__t_s {
    double x;
    double y;
} OPENEXR_ALIGN(8) Imath_3_0__Vec2_double__t;
typedef struct Imath_3_0__Vec3_short__t_s {
    short x;
    short y;
    short z;
} OPENEXR_ALIGN(2) Imath_3_0__Vec3_short__t;
typedef struct Imath_3_0__Vec3_int__t_s {
    int x;
    int y;
    int z;
} OPENEXR_ALIGN(4) Imath_3_0__Vec3_int__t;
typedef struct Imath_3_0__Vec3_long__t_s {
    long x;
    long y;
    long z;
} OPENEXR_ALIGN(8) Imath_3_0__Vec3_long__t;
typedef struct Imath_3_0__Vec3_float__t_s {
    float x;
    float y;
    float z;
} OPENEXR_ALIGN(4) Imath_3_0__Vec3_float__t;
typedef struct Imath_3_0__Vec3_double__t_s {
    double x;
    double y;
    double z;
} OPENEXR_ALIGN(8) Imath_3_0__Vec3_double__t;
typedef struct Imath_3_0__Vec4_short__t_s {
    short x;
    short y;
    short z;
    short w;
} OPENEXR_ALIGN(2) Imath_3_0__Vec4_short__t;
typedef struct Imath_3_0__Vec4_int__t_s {
    int x;
    int y;
    int z;
    int w;
} OPENEXR_ALIGN(4) Imath_3_0__Vec4_int__t;
typedef struct Imath_3_0__Vec4_long__t_s {
    long x;
    long y;
    long z;
    long w;
} OPENEXR_ALIGN(8) Imath_3_0__Vec4_long__t;
typedef struct Imath_3_0__Vec4_float__t_s {
    float x;
    float y;
    float z;
    float w;
} OPENEXR_ALIGN(4) Imath_3_0__Vec4_float__t;
typedef struct Imath_3_0__Vec4_double__t_s {
    double x;
    double y;
    double z;
    double w;
} OPENEXR_ALIGN(8) Imath_3_0__Vec4_double__t;
OPENEXR_API unsigned int Imath_3_0__Vec2_short__index(
    Imath_V2s_t * this_
    , short * * return_
    , int i);
OPENEXR_API unsigned int Imath_3_0__Vec2_short__index_const(
    Imath_V2s_t const * this_
    , short const * * return_
    , int i);
OPENEXR_API unsigned int Imath_3_0__Vec2_short__broadcast(
    Imath_V2s_t * this_
    , short a);
OPENEXR_API unsigned int Imath_3_0__Vec2_short__ctor(
    Imath_V2s_t * this_
    , short a
    , short b);
OPENEXR_API unsigned int Imath_3_0__Vec2_short__ctor_1(
    Imath_V2s_t * this_
    , Imath_V2s_t const * v);
OPENEXR_API unsigned int Imath_3_0__Vec2_short___assign(
    Imath_V2s_t * this_
    , Imath_V2s_t const * * return_
    , Imath_V2s_t const * v);
OPENEXR_API unsigned int Imath_3_0__Vec2_short__dtor(
    Imath_V2s_t * this_);
OPENEXR_API unsigned int Imath_3_0__Vec2_short__equalWithAbsError(
    Imath_V2s_t const * this_
    , _Bool * return_
    , Imath_V2s_t const * v
    , short e);
OPENEXR_API unsigned int Imath_3_0__Vec2_short__equalWithRelError(
    Imath_V2s_t const * this_
    , _Bool * return_
    , Imath_V2s_t const * v
    , short e);
OPENEXR_API unsigned int Imath_3_0__Vec2_short__dot(
    Imath_V2s_t const * this_
    , short * return_
    , Imath_V2s_t const * v);
OPENEXR_API unsigned int Imath_3_0__Vec2_short__cross(
    Imath_V2s_t const * this_
    , short * return_
    , Imath_V2s_t const * v);
OPENEXR_API unsigned int Imath_3_0__Vec2_short___op_iadd(
    Imath_V2s_t * this_
    , Imath_V2s_t const * * return_
    , Imath_V2s_t const * v);
OPENEXR_API unsigned int Imath_3_0__Vec2_short___op_add(
    Imath_V2s_t const * this_
    , Imath_V2s_t * return_
    , Imath_V2s_t const * v);
OPENEXR_API unsigned int Imath_3_0__Vec2_short___op_isub(
    Imath_V2s_t * this_
    , Imath_V2s_t const * * return_
    , Imath_V2s_t const * v);
OPENEXR_API unsigned int Imath_3_0__Vec2_short___op_sub(
    Imath_V2s_t const * this_
    , Imath_V2s_t * return_
    , Imath_V2s_t const * v);
OPENEXR_API unsigned int Imath_3_0__Vec2_short___op_sub_1(
    Imath_V2s_t const * this_
    , Imath_V2s_t * return_);
OPENEXR_API unsigned int Imath_3_0__Vec2_short__negate(
    Imath_V2s_t * this_
    , Imath_V2s_t const * * return_);
OPENEXR_API unsigned int Imath_3_0__Vec2_short___op_imul(
    Imath_V2s_t * this_
    , Imath_V2s_t const * * return_
    , Imath_V2s_t const * v);
OPENEXR_API unsigned int Imath_3_0__Vec2_short___op_imul_1(
    Imath_V2s_t * this_
    , Imath_V2s_t const * * return_
    , short a);
OPENEXR_API unsigned int Imath_3_0__Vec2_short___op_mul(
    Imath_V2s_t const * this_
    , Imath_V2s_t * return_
    , Imath_V2s_t const * v);
OPENEXR_API unsigned int Imath_3_0__Vec2_short___op_mul_1(
    Imath_V2s_t const * this_
    , Imath_V2s_t * return_
    , short a);
OPENEXR_API unsigned int Imath_3_0__Vec2_short___op_idiv(
    Imath_V2s_t * this_
    , Imath_V2s_t const * * return_
    , Imath_V2s_t const * v);
OPENEXR_API unsigned int Imath_3_0__Vec2_short___op_idiv_1(
    Imath_V2s_t * this_
    , Imath_V2s_t const * * return_
    , short a);
OPENEXR_API unsigned int Imath_3_0__Vec2_short___op_div(
    Imath_V2s_t const * this_
    , Imath_V2s_t * return_
    , Imath_V2s_t const * v);
OPENEXR_API unsigned int Imath_3_0__Vec2_short___op_div_1(
    Imath_V2s_t const * this_
    , Imath_V2s_t * return_
    , short a);
OPENEXR_API unsigned int Imath_3_0__Vec2_short__length2(
    Imath_V2s_t const * this_
    , short * return_);
OPENEXR_API unsigned int Imath_3_0__Vec2_short__baseTypeLowest(
    short * return_);
OPENEXR_API unsigned int Imath_3_0__Vec2_short__baseTypeMax(
    short * return_);
OPENEXR_API unsigned int Imath_3_0__Vec2_short__baseTypeSmallest(
    short * return_);
OPENEXR_API unsigned int Imath_3_0__Vec2_short__baseTypeEpsilon(
    short * return_);
OPENEXR_API unsigned int Imath_3_0__Vec2_short__dimensions(
    unsigned int * return_);
OPENEXR_API unsigned int Imath_3_0__Vec2_int__index(
    Imath_V2i_t * this_
    , int * * return_
    , int i);
OPENEXR_API unsigned int Imath_3_0__Vec2_int__index_const(
    Imath_V2i_t const * this_
    , int const * * return_
    , int i);
OPENEXR_API unsigned int Imath_3_0__Vec2_int__broadcast(
    Imath_V2i_t * this_
    , int a);
OPENEXR_API unsigned int Imath_3_0__Vec2_int__ctor(
    Imath_V2i_t * this_
    , int a
    , int b);
OPENEXR_API unsigned int Imath_3_0__Vec2_int__ctor_1(
    Imath_V2i_t * this_
    , Imath_V2i_t const * v);
OPENEXR_API unsigned int Imath_3_0__Vec2_int___assign(
    Imath_V2i_t * this_
    , Imath_V2i_t const * * return_
    , Imath_V2i_t const * v);
OPENEXR_API unsigned int Imath_3_0__Vec2_int__dtor(
    Imath_V2i_t * this_);
OPENEXR_API unsigned int Imath_3_0__Vec2_int__equalWithAbsError(
    Imath_V2i_t const * this_
    , _Bool * return_
    , Imath_V2i_t const * v
    , int e);
OPENEXR_API unsigned int Imath_3_0__Vec2_int__equalWithRelError(
    Imath_V2i_t const * this_
    , _Bool * return_
    , Imath_V2i_t const * v
    , int e);
OPENEXR_API unsigned int Imath_3_0__Vec2_int__dot(
    Imath_V2i_t const * this_
    , int * return_
    , Imath_V2i_t const * v);
OPENEXR_API unsigned int Imath_3_0__Vec2_int__cross(
    Imath_V2i_t const * this_
    , int * return_
    , Imath_V2i_t const * v);
OPENEXR_API unsigned int Imath_3_0__Vec2_int___op_iadd(
    Imath_V2i_t * this_
    , Imath_V2i_t const * * return_
    , Imath_V2i_t const * v);
OPENEXR_API unsigned int Imath_3_0__Vec2_int___op_add(
    Imath_V2i_t const * this_
    , Imath_V2i_t * return_
    , Imath_V2i_t const * v);
OPENEXR_API unsigned int Imath_3_0__Vec2_int___op_isub(
    Imath_V2i_t * this_
    , Imath_V2i_t const * * return_
    , Imath_V2i_t const * v);
OPENEXR_API unsigned int Imath_3_0__Vec2_int___op_sub(
    Imath_V2i_t const * this_
    , Imath_V2i_t * return_
    , Imath_V2i_t const * v);
OPENEXR_API unsigned int Imath_3_0__Vec2_int___op_sub_1(
    Imath_V2i_t const * this_
    , Imath_V2i_t * return_);
OPENEXR_API unsigned int Imath_3_0__Vec2_int__negate(
    Imath_V2i_t * this_
    , Imath_V2i_t const * * return_);
OPENEXR_API unsigned int Imath_3_0__Vec2_int___op_imul(
    Imath_V2i_t * this_
    , Imath_V2i_t const * * return_
    , Imath_V2i_t const * v);
OPENEXR_API unsigned int Imath_3_0__Vec2_int___op_imul_1(
    Imath_V2i_t * this_
    , Imath_V2i_t const * * return_
    , int a);
OPENEXR_API unsigned int Imath_3_0__Vec2_int___op_mul(
    Imath_V2i_t const * this_
    , Imath_V2i_t * return_
    , Imath_V2i_t const * v);
OPENEXR_API unsigned int Imath_3_0__Vec2_int___op_mul_1(
    Imath_V2i_t const * this_
    , Imath_V2i_t * return_
    , int a);
OPENEXR_API unsigned int Imath_3_0__Vec2_int___op_idiv(
    Imath_V2i_t * this_
    , Imath_V2i_t const * * return_
    , Imath_V2i_t const * v);
OPENEXR_API unsigned int Imath_3_0__Vec2_int___op_idiv_1(
    Imath_V2i_t * this_
    , Imath_V2i_t const * * return_
    , int a);
OPENEXR_API unsigned int Imath_3_0__Vec2_int___op_div(
    Imath_V2i_t const * this_
    , Imath_V2i_t * return_
    , Imath_V2i_t const * v);
OPENEXR_API unsigned int Imath_3_0__Vec2_int___op_div_1(
    Imath_V2i_t const * this_
    , Imath_V2i_t * return_
    , int a);
OPENEXR_API unsigned int Imath_3_0__Vec2_int__length2(
    Imath_V2i_t const * this_
    , int * return_);
OPENEXR_API unsigned int Imath_3_0__Vec2_int__baseTypeLowest(
    int * return_);
OPENEXR_API unsigned int Imath_3_0__Vec2_int__baseTypeMax(
    int * return_);
OPENEXR_API unsigned int Imath_3_0__Vec2_int__baseTypeSmallest(
    int * return_);
OPENEXR_API unsigned int Imath_3_0__Vec2_int__baseTypeEpsilon(
    int * return_);
OPENEXR_API unsigned int Imath_3_0__Vec2_int__dimensions(
    unsigned int * return_);
OPENEXR_API unsigned int Imath_3_0__Vec2_long__index(
    Imath_V2i64_t * this_
    , long * * return_
    , int i);
OPENEXR_API unsigned int Imath_3_0__Vec2_long__index_const(
    Imath_V2i64_t const * this_
    , long const * * return_
    , int i);
OPENEXR_API unsigned int Imath_3_0__Vec2_long__broadcast(
    Imath_V2i64_t * this_
    , long a);
OPENEXR_API unsigned int Imath_3_0__Vec2_long__ctor(
    Imath_V2i64_t * this_
    , long a
    , long b);
OPENEXR_API unsigned int Imath_3_0__Vec2_long__copy(
    Imath_V2i64_t * this_
    , Imath_V2i64_t const * v);
OPENEXR_API unsigned int Imath_3_0__Vec2_long___assign(
    Imath_V2i64_t * this_
    , Imath_V2i64_t const * * return_
    , Imath_V2i64_t const * v);
OPENEXR_API unsigned int Imath_3_0__Vec2_long__dtor(
    Imath_V2i64_t * this_);
OPENEXR_API unsigned int Imath_3_0__Vec2_long__equalWithAbsError(
    Imath_V2i64_t const * this_
    , _Bool * return_
    , Imath_V2i64_t const * v
    , long e);
OPENEXR_API unsigned int Imath_3_0__Vec2_long__equalWithRelError(
    Imath_V2i64_t const * this_
    , _Bool * return_
    , Imath_V2i64_t const * v
    , long e);
OPENEXR_API unsigned int Imath_3_0__Vec2_long__dot(
    Imath_V2i64_t const * this_
    , long * return_
    , Imath_V2i64_t const * v);
OPENEXR_API unsigned int Imath_3_0__Vec2_long__cross(
    Imath_V2i64_t const * this_
    , long * return_
    , Imath_V2i64_t const * v);
OPENEXR_API unsigned int Imath_3_0__Vec2_long___op_iadd(
    Imath_V2i64_t * this_
    , Imath_V2i64_t const * * return_
    , Imath_V2i64_t const * v);
OPENEXR_API unsigned int Imath_3_0__Vec2_long___op_add(
    Imath_V2i64_t const * this_
    , Imath_V2i64_t * return_
    , Imath_V2i64_t const * v);
OPENEXR_API unsigned int Imath_3_0__Vec2_long___op_isub(
    Imath_V2i64_t * this_
    , Imath_V2i64_t const * * return_
    , Imath_V2i64_t const * v);
OPENEXR_API unsigned int Imath_3_0__Vec2_long___op_sub(
    Imath_V2i64_t const * this_
    , Imath_V2i64_t * return_
    , Imath_V2i64_t const * v);
OPENEXR_API unsigned int Imath_3_0__Vec2_long___op_sub_1(
    Imath_V2i64_t const * this_
    , Imath_V2i64_t * return_);
OPENEXR_API unsigned int Imath_3_0__Vec2_long__negate(
    Imath_V2i64_t * this_
    , Imath_V2i64_t const * * return_);
OPENEXR_API unsigned int Imath_3_0__Vec2_long___op_imul(
    Imath_V2i64_t * this_
    , Imath_V2i64_t const * * return_
    , Imath_V2i64_t const * v);
OPENEXR_API unsigned int Imath_3_0__Vec2_long___op_imul_1(
    Imath_V2i64_t * this_
    , Imath_V2i64_t const * * return_
    , long a);
OPENEXR_API unsigned int Imath_3_0__Vec2_long___op_mul(
    Imath_V2i64_t const * this_
    , Imath_V2i64_t * return_
    , Imath_V2i64_t const * v);