openexr-sys/src/imath_vec.rs

#![allow(non_snake_case)]
#![allow(non_camel_case_types)]
#![allow(non_upper_case_globals)]
#![allow(unused_imports)]
use crate::*;
use std::os::raw::*;

#[repr(C, align(2))]
#[derive(Clone)]
pub struct Imath_3_0__Vec2_short__t {
    pub x: c_short,
    pub y: c_short,
}

#[repr(C, align(4))]
#[derive(Clone)]
pub struct Imath_3_0__Vec2_int__t {
    pub x: c_int,
    pub y: c_int,
}

#[repr(C, align(8))]
#[derive(Clone)]
pub struct Imath_3_0__Vec2_long__t {
    pub x: c_long,
    pub y: c_long,
}

#[repr(C, align(4))]
#[derive(Clone)]
pub struct Imath_3_0__Vec2_float__t {
    pub x: c_float,
    pub y: c_float,
}

#[repr(C, align(8))]
#[derive(Clone)]
pub struct Imath_3_0__Vec2_double__t {
    pub x: c_double,
    pub y: c_double,
}

#[repr(C, align(2))]
#[derive(Clone)]
pub struct Imath_3_0__Vec3_short__t {
    pub x: c_short,
    pub y: c_short,
    pub z: c_short,
}

#[repr(C, align(4))]
#[derive(Clone)]
pub struct Imath_3_0__Vec3_int__t {
    pub x: c_int,
    pub y: c_int,
    pub z: c_int,
}

#[repr(C, align(8))]
#[derive(Clone)]
pub struct Imath_3_0__Vec3_long__t {
    pub x: c_long,
    pub y: c_long,
    pub z: c_long,
}

#[repr(C, align(4))]
#[derive(Clone)]
pub struct Imath_3_0__Vec3_float__t {
    pub x: c_float,
    pub y: c_float,
    pub z: c_float,
}

#[repr(C, align(8))]
#[derive(Clone)]
pub struct Imath_3_0__Vec3_double__t {
    pub x: c_double,
    pub y: c_double,
    pub z: c_double,
}

#[repr(C, align(2))]
#[derive(Clone)]
pub struct Imath_3_0__Vec4_short__t {
    pub x: c_short,
    pub y: c_short,
    pub z: c_short,
    pub w: c_short,
}

#[repr(C, align(4))]
#[derive(Clone)]
pub struct Imath_3_0__Vec4_int__t {
    pub x: c_int,
    pub y: c_int,
    pub z: c_int,
    pub w: c_int,
}

#[repr(C, align(8))]
#[derive(Clone)]
pub struct Imath_3_0__Vec4_long__t {
    pub x: c_long,
    pub y: c_long,
    pub z: c_long,
    pub w: c_long,
}

#[repr(C, align(4))]
#[derive(Clone)]
pub struct Imath_3_0__Vec4_float__t {
    pub x: c_float,
    pub y: c_float,
    pub z: c_float,
    pub w: c_float,
}

#[repr(C, align(8))]
#[derive(Clone)]
pub struct Imath_3_0__Vec4_double__t {
    pub x: c_double,
    pub y: c_double,
    pub z: c_double,
    pub w: c_double,
}


#[repr(transparent)]
#[derive(Debug, Copy, Clone, PartialEq, Eq)]
pub struct Imath_3_0__InfException_e(pub u32);
pub const Imath_InfException_INF_EXCEPTION: Imath_3_0__InfException_e = Imath_3_0__InfException_e(0);


extern "C" {

pub fn Imath_3_0__Vec2_short__index(this_: *mut Imath_V2s_t, return_: *mut *mut c_short, i: c_int) -> Exception;

pub fn Imath_3_0__Vec2_short__index_const(this_: *const Imath_V2s_t, return_: *mut *const c_short, i: c_int) -> Exception;

pub fn Imath_3_0__Vec2_short__broadcast(this_: *mut Imath_V2s_t, a: c_short) -> Exception;

pub fn Imath_3_0__Vec2_short__ctor(this_: *mut Imath_V2s_t, a: c_short, b: c_short) -> Exception;

pub fn Imath_3_0__Vec2_short__ctor_1(this_: *mut Imath_V2s_t, v: *const Imath_V2s_t) -> Exception;

pub fn Imath_3_0__Vec2_short___assign(this_: *mut Imath_V2s_t, return_: *mut *const Imath_V2s_t, v: *const Imath_V2s_t) -> Exception;

pub fn Imath_3_0__Vec2_short__dtor(this_: *mut Imath_V2s_t) -> Exception;

pub fn Imath_3_0__Vec2_short__equalWithAbsError(this_: *const Imath_V2s_t, return_: *mut bool, v: *const Imath_V2s_t, e: c_short) -> Exception;

pub fn Imath_3_0__Vec2_short__equalWithRelError(this_: *const Imath_V2s_t, return_: *mut bool, v: *const Imath_V2s_t, e: c_short) -> Exception;

pub fn Imath_3_0__Vec2_short__dot(this_: *const Imath_V2s_t, return_: *mut c_short, v: *const Imath_V2s_t) -> Exception;

pub fn Imath_3_0__Vec2_short__cross(this_: *const Imath_V2s_t, return_: *mut c_short, v: *const Imath_V2s_t) -> Exception;

pub fn Imath_3_0__Vec2_short___op_iadd(this_: *mut Imath_V2s_t, return_: *mut *const Imath_V2s_t, v: *const Imath_V2s_t) -> Exception;

pub fn Imath_3_0__Vec2_short___op_add(this_: *const Imath_V2s_t, return_: *mut Imath_V2s_t, v: *const Imath_V2s_t) -> Exception;

pub fn Imath_3_0__Vec2_short___op_isub(this_: *mut Imath_V2s_t, return_: *mut *const Imath_V2s_t, v: *const Imath_V2s_t) -> Exception;

pub fn Imath_3_0__Vec2_short___op_sub(this_: *const Imath_V2s_t, return_: *mut Imath_V2s_t, v: *const Imath_V2s_t) -> Exception;

pub fn Imath_3_0__Vec2_short___op_sub_1(this_: *const Imath_V2s_t, return_: *mut Imath_V2s_t) -> Exception;

pub fn Imath_3_0__Vec2_short__negate(this_: *mut Imath_V2s_t, return_: *mut *const Imath_V2s_t) -> Exception;

pub fn Imath_3_0__Vec2_short___op_imul(this_: *mut Imath_V2s_t, return_: *mut *const Imath_V2s_t, v: *const Imath_V2s_t) -> Exception;

pub fn Imath_3_0__Vec2_short___op_imul_1(this_: *mut Imath_V2s_t, return_: *mut *const Imath_V2s_t, a: c_short) -> Exception;

pub fn Imath_3_0__Vec2_short___op_mul(this_: *const Imath_V2s_t, return_: *mut Imath_V2s_t, v: *const Imath_V2s_t) -> Exception;

pub fn Imath_3_0__Vec2_short___op_mul_1(this_: *const Imath_V2s_t, return_: *mut Imath_V2s_t, a: c_short) -> Exception;

pub fn Imath_3_0__Vec2_short___op_idiv(this_: *mut Imath_V2s_t, return_: *mut *const Imath_V2s_t, v: *const Imath_V2s_t) -> Exception;

pub fn Imath_3_0__Vec2_short___op_idiv_1(this_: *mut Imath_V2s_t, return_: *mut *const Imath_V2s_t, a: c_short) -> Exception;

pub fn Imath_3_0__Vec2_short___op_div(this_: *const Imath_V2s_t, return_: *mut Imath_V2s_t, v: *const Imath_V2s_t) -> Exception;

pub fn Imath_3_0__Vec2_short___op_div_1(this_: *const Imath_V2s_t, return_: *mut Imath_V2s_t, a: c_short) -> Exception;

pub fn Imath_3_0__Vec2_short__length2(this_: *const Imath_V2s_t, return_: *mut c_short) -> Exception;

pub fn Imath_3_0__Vec2_short__baseTypeLowest(return_: *mut c_short) -> Exception;

pub fn Imath_3_0__Vec2_short__baseTypeMax(return_: *mut c_short) -> Exception;

pub fn Imath_3_0__Vec2_short__baseTypeSmallest(return_: *mut c_short) -> Exception;

pub fn Imath_3_0__Vec2_short__baseTypeEpsilon(return_: *mut c_short) -> Exception;

pub fn Imath_3_0__Vec2_short__dimensions(return_: *mut c_uint) -> Exception;

pub fn Imath_3_0__Vec2_int__index(this_: *mut Imath_V2i_t, return_: *mut *mut c_int, i: c_int) -> Exception;

pub fn Imath_3_0__Vec2_int__index_const(this_: *const Imath_V2i_t, return_: *mut *const c_int, i: c_int) -> Exception;

pub fn Imath_3_0__Vec2_int__broadcast(this_: *mut Imath_V2i_t, a: c_int) -> Exception;

pub fn Imath_3_0__Vec2_int__ctor(this_: *mut Imath_V2i_t, a: c_int, b: c_int) -> Exception;

pub fn Imath_3_0__Vec2_int__ctor_1(this_: *mut Imath_V2i_t, v: *const Imath_V2i_t) -> Exception;

pub fn Imath_3_0__Vec2_int___assign(this_: *mut Imath_V2i_t, return_: *mut *const Imath_V2i_t, v: *const Imath_V2i_t) -> Exception;

pub fn Imath_3_0__Vec2_int__dtor(this_: *mut Imath_V2i_t) -> Exception;

pub fn Imath_3_0__Vec2_int__equalWithAbsError(this_: *const Imath_V2i_t, return_: *mut bool, v: *const Imath_V2i_t, e: c_int) -> Exception;

pub fn Imath_3_0__Vec2_int__equalWithRelError(this_: *const Imath_V2i_t, return_: *mut bool, v: *const Imath_V2i_t, e: c_int) -> Exception;

pub fn Imath_3_0__Vec2_int__dot(this_: *const Imath_V2i_t, return_: *mut c_int, v: *const Imath_V2i_t) -> Exception;

pub fn Imath_3_0__Vec2_int__cross(this_: *const Imath_V2i_t, return_: *mut c_int, v: *const Imath_V2i_t) -> Exception;

pub fn Imath_3_0__Vec2_int___op_iadd(this_: *mut Imath_V2i_t, return_: *mut *const Imath_V2i_t, v: *const Imath_V2i_t) -> Exception;

pub fn Imath_3_0__Vec2_int___op_add(this_: *const Imath_V2i_t, return_: *mut Imath_V2i_t, v: *const Imath_V2i_t) -> Exception;

pub fn Imath_3_0__Vec2_int___op_isub(this_: *mut Imath_V2i_t, return_: *mut *const Imath_V2i_t, v: *const Imath_V2i_t) -> Exception;

pub fn Imath_3_0__Vec2_int___op_sub(this_: *const Imath_V2i_t, return_: *mut Imath_V2i_t, v: *const Imath_V2i_t) -> Exception;

pub fn Imath_3_0__Vec2_int___op_sub_1(this_: *const Imath_V2i_t, return_: *mut Imath_V2i_t) -> Exception;

pub fn Imath_3_0__Vec2_int__negate(this_: *mut Imath_V2i_t, return_: *mut *const Imath_V2i_t) -> Exception;

pub fn Imath_3_0__Vec2_int___op_imul(this_: *mut Imath_V2i_t, return_: *mut *const Imath_V2i_t, v: *const Imath_V2i_t) -> Exception;

pub fn Imath_3_0__Vec2_int___op_imul_1(this_: *mut Imath_V2i_t, return_: *mut *const Imath_V2i_t, a: c_int) -> Exception;

pub fn Imath_3_0__Vec2_int___op_mul(this_: *const Imath_V2i_t, return_: *mut Imath_V2i_t, v: *const Imath_V2i_t) -> Exception;

pub fn Imath_3_0__Vec2_int___op_mul_1(this_: *const Imath_V2i_t, return_: *mut Imath_V2i_t, a: c_int) -> Exception;

pub fn Imath_3_0__Vec2_int___op_idiv(this_: *mut Imath_V2i_t, return_: *mut *const Imath_V2i_t, v: *const Imath_V2i_t) -> Exception;

pub fn Imath_3_0__Vec2_int___op_idiv_1(this_: *mut Imath_V2i_t, return_: *mut *const Imath_V2i_t, a: c_int) -> Exception;

pub fn Imath_3_0__Vec2_int___op_div(this_: *const Imath_V2i_t, return_: *mut Imath_V2i_t, v: *const Imath_V2i_t) -> Exception;

pub fn Imath_3_0__Vec2_int___op_div_1(this_: *const Imath_V2i_t, return_: *mut Imath_V2i_t, a: c_int) -> Exception;

pub fn Imath_3_0__Vec2_int__length2(this_: *const Imath_V2i_t, return_: *mut c_int) -> Exception;

pub fn Imath_3_0__Vec2_int__baseTypeLowest(return_: *mut c_int) -> Exception;

pub fn Imath_3_0__Vec2_int__baseTypeMax(return_: *mut c_int) -> Exception;

pub fn Imath_3_0__Vec2_int__baseTypeSmallest(return_: *mut c_int) -> Exception;

pub fn Imath_3_0__Vec2_int__baseTypeEpsilon(return_: *mut c_int) -> Exception;

pub fn Imath_3_0__Vec2_int__dimensions(return_: *mut c_uint) -> Exception;

pub fn Imath_3_0__Vec2_long__index(this_: *mut Imath_V2i64_t, return_: *mut *mut c_long, i: c_int) -> Exception;

pub fn Imath_3_0__Vec2_long__index_const(this_: *const Imath_V2i64_t, return_: *mut *const c_long, i: c_int) -> Exception;

pub fn Imath_3_0__Vec2_long__broadcast(this_: *mut Imath_V2i64_t, a: c_long) -> Exception;

pub fn Imath_3_0__Vec2_long__ctor(this_: *mut Imath_V2i64_t, a: c_long, b: c_long) -> Exception;

pub fn Imath_3_0__Vec2_long__copy(this_: *mut Imath_V2i64_t, v: *const Imath_V2i64_t) -> Exception;

pub fn Imath_3_0__Vec2_long___assign(this_: *mut Imath_V2i64_t, return_: *mut *const Imath_V2i64_t, v: *const Imath_V2i64_t) -> Exception;

pub fn Imath_3_0__Vec2_long__dtor(this_: *mut Imath_V2i64_t) -> Exception;

pub fn Imath_3_0__Vec2_long__equalWithAbsError(this_: *const Imath_V2i64_t, return_: *mut bool, v: *const Imath_V2i64_t, e: c_long) -> Exception;

pub fn Imath_3_0__Vec2_long__equalWithRelError(this_: *const Imath_V2i64_t, return_: *mut bool, v: *const Imath_V2i64_t, e: c_long) -> Exception;

pub fn Imath_3_0__Vec2_long__dot(this_: *const Imath_V2i64_t, return_: *mut c_long, v: *const Imath_V2i64_t) -> Exception;

pub fn Imath_3_0__Vec2_long__cross(this_: *const Imath_V2i64_t, return_: *mut c_long, v: *const Imath_V2i64_t) -> Exception;

pub fn Imath_3_0__Vec2_long___op_iadd(this_: *mut Imath_V2i64_t, return_: *mut *const Imath_V2i64_t, v: *const Imath_V2i64_t) -> Exception;

pub fn Imath_3_0__Vec2_long___op_add(this_: *const Imath_V2i64_t, return_: *mut Imath_V2i64_t, v: *const Imath_V2i64_t) -> Exception;

pub fn Imath_3_0__Vec2_long___op_isub(this_: *mut Imath_V2i64_t, return_: *mut *const Imath_V2i64_t, v: *const Imath_V2i64_t) -> Exception;

pub fn Imath_3_0__Vec2_long___op_sub(this_: *const Imath_V2i64_t, return_: *mut Imath_V2i64_t, v: *const Imath_V2i64_t) -> Exception;

pub fn Imath_3_0__Vec2_long___op_sub_1(this_: *const Imath_V2i64_t, return_: *mut Imath_V2i64_t) -> Exception;

pub fn Imath_3_0__Vec2_long__negate(this_: *mut Imath_V2i64_t, return_: *mut *const Imath_V2i64_t) -> Exception;

pub fn Imath_3_0__Vec2_long___op_imul(this_: *mut Imath_V2i64_t, return_: *mut *const Imath_V2i64_t, v: *const Imath_V2i64_t) -> Exception;

pub fn Imath_3_0__Vec2_long___op_imul_1(this_: *mut Imath_V2i64_t, return_: *mut *const Imath_V2i64_t, a: c_long) -> Exception;

pub fn Imath_3_0__Vec2_long___op_mul(this_: *const Imath_V2i64_t, return_: *mut Imath_V2i64_t, v: *const Imath_V2i64_t) -> Exception;
